       (or just --black for short),
    - "--bm" now has two hyphens in all uses (it was -bm in some cases),
. (kfsone) "market" command:
    - Only show the age of items once,
. (kfsone) "nav" command:
    - Fixed --refuel-jumps
    - Added --pad-size to limit which stations will be listed/refuelled at,
. (kfsone) "buy" and "sell" commands:
    - Added "--black-market" (--bm) option,
. (kfsone) Performance:
    - Re-unified the StationBuying/StationSelling tables into StationItem,
    - Added StationBuying and StationSelling views,
    - Minor refactor of getTrades to reduce the pathalogical near O(n^2)
      behavior it used to match buyers to sellers,
    - Improved performance of nav command slightly,
    - "import" plugin now uses the "requests" module, which means that
      it will automatically download/use compressed .prices files when
      they are made available. E.g. maddavo's .prices files now require
      upto 5x less bandwidth.


v6.18.6 Apr 27 2015
. (kfsone) Fixed #225 'Generator already running'
. (kfsone) Performance improvement: Reduced the cost of "getTrades"

v6.18.5 Apr 26 2015
. (kfsone) Fixed #224 run -vv and above was raising an exception
. (kfsone) Fixed #223 "unrecognized system" errors
. (gazelle) Lots of data fixes
. (snakeman via maddavo) Lots of station fixes

v6.18.4 Apr 24 2015
. (kfsone) Fix for updateLocalSystem that would change ALL systems at once

v6.18.3 Apr 19 2015
. (kfsone) Added "--shorten" (requires --to)
        Will show routes with less hops if they produces a better gpt
. (kfsone) "import" maddavo plugin:
        - Added sanity checking of timestamps during System.csv import
          (there was a new system in mad's data with an apostrophe in the
           modified timestamp)
+ (kfsone) ~310 new systems

v6.18.2 Apr 18 2015
. (kfsone) Added "--loop-int" (-li) option to "run"
        trade.py run ... --loop-int 2
        will require a minimum of 2 hops before visiting the same station

v6.18.1 Apr 13 2015