@@ -977,6 +977,15 @@ Options:
       Only considers stations within reach of the specified system.
       --near chango
 
+    --ly N.N
+      Sets the range of --near (requires --near)
+      --near chango --ly 10
+
+    --avoid <system|station>[,<system|station>,...]
+      Don't show entries for the specified systems/stations
+      e.g.
+        --avoid sol --avoid ross154 --avoid abrahamlincoln,marshigh
+
     --one-stop
     -1
       When multiple items or ships are listed, only lists stations
@@ -985,10 +994,6 @@ Options:
     --limit N
       Limit how many results re shown
       --limit 5
-
-    --ly-per N.N
-      Sets the range of --near (requires --near)
-      --near chango --ly 10
 
     --lt credits
     --gt credits
@@ -1041,13 +1046,18 @@ Options:
       Only considers stations within reach of the specified system.
       --near chango
 
+    --ly N.N
+      Sets the range of --near (requires --near)
+      --near chango --ly 10
+
+    --avoid <system|station>[,<system|station>,...]
+      Don't show entries for the specified systems/stations
+      e.g.
+        --avoid sol --avoid ross154 --avoid abrahamlincoln,marshigh
+
     --limit N
       Limit how many results re shown
       --limit 5
-
-    --ly-per N.N
-      Sets the range of --near (requires --near)
-      --near chango --ly 10
 
     --lt credits
     --gt credits
